# MasterTimer

./: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  test.cpp
timersrc/: CMakeLists.txt  README.md
timersrc/include/: Timer.h  TimerExport.h
timersrc/src/: Timer.cpp
